feat: Add complete Plugin Browser system with in-game GUI and Discord integration
This commit introduces a comprehensive plugin browser system that allows users to
browse, upload, and install JavaScript plugins directly from Minecraft with a
centralized server architecture.

## Core Components

### Backend Server (Node.js)
- RESTful API server for plugin management (upload, download, search, details)
- SQLite database for plugins, users, and reviews
- Rate limiting and security measures (file size validation, SHA256 hashing)
- Structured logging system with timestamps and context
- User management system (UUID-based with username tracking)
- User verification and blacklist system

### Java API Integration
- PluginBrowserAPI class for server-side plugin browser functionality
- Automatic metadata extraction from plugin files using Rhino engine
- Plugin file access methods (getPluginFile, pluginFileExists)
- Network request handling with proper error messages
- Support for plugin upload with uploader UUID and name tracking

### In-Game Plugin (JavaScript)
- Interactive GUI-based plugin browser with pagination
- Search and category filtering functionality
- Plugin details view with ratings and download counts
- One-click plugin installation
- Upload functionality with automatic metadata extraction
- Display of uploader verification status (verified/blacklisted/unverified)
- Proper Java-to-JavaScript object conversion for type safety

### Discord Bot Integration
- Admin commands for plugin review (approve, reject, details)
- Plugin code display in review embeds with smart field splitting
- User management commands (verify, blacklist, userinfo)
- Permission-based access control
- Support for UUID and username as identifiers
- Comprehensive error handling and user feedback

## Key Features

- **Centralized Architecture**: Single server serves all MC-JS instances
- **Automatic Metadata Extraction**: Version, author, description from pluginInfo
- **User Tracking**: Stores up

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -39,3 +39,19 @@ security:
   allowed-paths:
     - "plugins/MC-JS/js-plugins/"
     - "plugins/MC-JS/data/"
+
+# Plugin Browser Settings
+plugin-browser:
+  # URL of the central plugin browser server
+  # This is a shared server for all MC-JS users
+  # Default: Official MC-JS Plugin Browser (if available)
+  url: "https://browser.flori.tv"
+  
+  # Enable plugin browser features
+  enabled: true
+  
+  # Note: Use /pluginbrowser command in-game to browse and install plugins
+  # The plugin-browser.js plugin must be loaded for in-game features
+  # 
+  # The plugin browser is shared - all users can upload and download plugins
+  # Plugins are reviewed before being published for security
